// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`on Post on Slack allows overriding of the \`parse\` parameter 1`] = `
Object {
  "auth": Object {
    "bearer": "TOKEN",
  },
  "body": Object {
    "attachments": Array [],
    "channel": "DBB7G0WBG",
    "icon_emoji": ":speaking_head_in_silhouette:",
    "link_names": true,
    "parse": "none",
    "text": "some content to *show* how _amazing_ this ~is~",
    "username": undefined,
  },
  "json": true,
  "method": "POST",
  "url": "https://slack.com/api/chat.postMessage",
}
`;

exports[`on Post on Slack should fail with the wrong parameters 1`] = `[Error: channel and/or message missing]`;

exports[`on Post on Slack should post a DM with the right parameters 1`] = `
Object {
  "channel": "CB6S4V8NP",
  "message": Object {
    "attachments": Array [
      Object {
        "fallback": "And here's an attachment!",
        "id": 1,
        "text": "And here's an attachment!",
      },
    ],
    "bot_id": "BB5KBR5Q8",
    "subtype": "bot_message",
    "text": "some content to *show* how _amazing_ this ~is~",
    "ts": "1528914636.000177",
    "type": "message",
    "username": "bot",
  },
  "ok": true,
  "response_metadata": Object {
    "warnings": Array [
      "missing_charset",
    ],
  },
  "ts": "1528914636.000177",
  "warning": "missing_charset",
}
`;

exports[`on Post on Slack should post to a channel with the right parameters 1`] = `
Object {
  "channel": "CB6S4V8NP",
  "message": Object {
    "attachments": Array [
      Object {
        "fallback": "And here's an attachment!",
        "id": 1,
        "text": "And here's an attachment!",
      },
    ],
    "bot_id": "BB5KBR5Q8",
    "subtype": "bot_message",
    "text": "some content to *show* how _amazing_ this ~is~",
    "ts": "1528914636.000177",
    "type": "message",
    "username": "bot",
  },
  "ok": true,
  "response_metadata": Object {
    "warnings": Array [
      "missing_charset",
    ],
  },
  "ts": "1528914636.000177",
  "warning": "missing_charset",
}
`;

exports[`on Post on Slack should send proper default arguments 1`] = `
Object {
  "auth": Object {
    "bearer": "TOKEN",
  },
  "body": Object {
    "attachments": Array [],
    "channel": "testing-gago-channel",
    "icon_emoji": ":speaking_head_in_silhouette:",
    "link_names": true,
    "parse": "full",
    "text": "some content to *show* how _amazing_ this ~is~",
    "username": undefined,
  },
  "json": true,
  "method": "POST",
  "url": "https://slack.com/api/chat.postMessage",
}
`;
